<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewUserActivity">


...
        android:id="@+id/profilePicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/camera"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditProfile" />

    <TableLayout
        android:id="@+id/height_weight"
...
                android:gravity="center"
                android:text="@string/tvHeight"
                android:textAlignment="center"
                android:textColor="@color/gradient_purple" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:inputType="numberDecimal"
...
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/raleway_semibold"
                android:gravity="center"
                android:text="@string/tvWeight"
                android:textAlignment="center"
                android:textColor="@color/gradient_purple"
                tools:layout_constraintEnd_toStartOf="@id/etWeight" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
...
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/tvAge"
        android:textAlignment="center"
        android:textColor="@color/gradient_purple"
        app:layout_constraintEnd_toStartOf="@+id/etDate"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/etZip"
        app:layout_constraintTop_toTopOf="@+id/tvZip" />

    <EditText
        android:id="@+id/etDate"
...
