...
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="--"
        android:textColor="@color/BMI_pink"
        android:textSize="120dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <TableLayout
...
                android:gravity="right|center_vertical"
                android:text="--"
                android:textColor="@color/BMI_pink"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/tvKilograms"
                android:textColor="@color/BMI_pink"
...
