<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserHomeActivity">

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_3"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvWelcomeUser"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/tvWelcomeUser"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toStartOf="@+id/profilePicture"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="MYNAME"
        android:textColor="@color/gradient_purple"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/tvWelcomeUser"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeUser" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/tvUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvWelcomeUser"
        app:layout_constraintTop_toTopOf="@+id/tvWelcomeUser"
        app:srcCompat="@drawable/lyfr_r" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibBMI"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="centerInside"
                android:scaleX="1.1"
                android:scaleY="1.1"
                app:srcCompat="@drawable/calculator" />

            <ImageButton
                android:id="@+id/ibWeather"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="fitCenter"
                android:scaleX="1.1"
                android:scaleY="1.1"
                app:srcCompat="@drawable/weather" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvBMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="BMI\nCALCULATOR"
                android:textColor="@color/BMI_pink"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center_horizontal"
                android:text="@string/tvWeather"
                android:textColor="@color/WEATHER_blue"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibFitnessGoals"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="fitCenter"
                android:scaleX="1.1"
                android:scaleY="1.1"
                app:srcCompat="@drawable/heartbeat" />

            <ImageButton
                android:id="@+id/ibHikeMap"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="fitCenter"
                android:scaleX="1.1"
                android:scaleY="1.1"
                app:srcCompat="@drawable/hike" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvFitnessGoals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="FITNESS\nGOALS"
                android:textColor="@color/FITNESS_purple"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="FIND A\nHIKE"
                android:textColor="@color/HIKE_green"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ibStepCounter"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="fitCenter"
                android:scaleX="1.1"
                android:scaleY="1.1"
                app:srcCompat="@drawable/footsteps" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvStepCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="STEP\nCOUNTER"
                android:textColor="@color/StepCounter"
                android:textSize="16dp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>